--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -25,8 +25,8 @@
                             <MudTd>
                                 <MudText>@context.Name</MudText>
                             </MudTd>
-                            <MudTd Class="pa-0" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                                <MudText Typo="Typo.caption">@context.Number</MudText>
+                            <MudTd Class="pa-0">
+                                <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                             </MudTd>
                             <MudTd>
                                 <MudText Typo="Typo.caption">@context.TotalDnf</MudText>
