--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/MudTdResult.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/MudTdResult.razor
@@ -13,17 +13,14 @@
 </MudTd>
 
 @code {
-    [Parameter]
-    public StandingResultCell Result { get; set; }
-
-    [Parameter]
-    public int LowestScoringPosition { get; set; }
+    [Parameter] public StandingResultCell? Result { get; set; }
+    [Parameter] public int LowestScoringPosition { get; set; }
 
     private Typo Typo { get; set; } = Typo.h4;
 
     protected override void OnInitialized()
     {
-        if (Result.Status != RaceStatus.Racing)
+        if (Result?.Status != RaceStatus.Racing)
             Typo = Typo.caption;
     }
 
@@ -31,7 +28,7 @@
     {
         get
         {
-            return Result.GetResultText();
+            return Result?.GetResultText() ?? "-";
         }
     }
 
@@ -39,7 +36,7 @@
     {
         get
         {
-            return Result.Pole;
+            return Result?.Pole ?? false;
         }
     }
 
@@ -47,8 +44,7 @@
     {
         get
         {
-            // this is never calculated yet I believe
-            return Result.FL;
+            return Result?.FL ?? false;
         }
     }
 
@@ -56,7 +52,7 @@
     {
         get
         {
-            return Result.GetResultStyle(LowestScoringPosition);
+            return Result?.GetResultStyle(LowestScoringPosition) ?? string.Empty;
         }
     }
 }
