--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -1,5 +1,5 @@
-﻿@inject SeasonEntrantService EntrantService
-@inject RaceService RaceService
+﻿@inject SeasonEntrantService _entrantService
+@inject RaceService _raceService
 @inject IDialogService _dialog
 
 @if (!loading)
@@ -17,226 +17,20 @@
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="6">
-                    <MudPaper Elevation="15" Class="pa-4 mud-height-full">
-                        <MudPaper MinHeight="60px">
-                            <MudText Typo="Typo.h5">Drivers</MudText>
-                        </MudPaper>
-                        <MudTable Items="@DriverResultsModel" Dense="true">
-                            <HeaderContent>
-                                <MudTh Class="number-col">#</MudTh>
-                                <MudTh Class="accent-cell"></MudTh>
-                                <MudTh>Name</MudTh>
-                                <MudTh Class="number-col">No.</MudTh>
-                                <MudTh>
-                                    <MudTableSortLabel SortBy="new Func<StandingDriverModel, object>(e => e.Points)">PTS</MudTableSortLabel>
-                                </MudTh>
-                            </HeaderContent>
-                            <RowTemplate>
-                                <MudTd Class="number-col">
-                                    <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
-                                </MudTd>
-                                <MudTd Class="accent-cell">
-                                    <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
-                                </MudTd>
-                                <MudTd>
-                                    <MudStack Row="true">
-                                        <MudText>@context.Name</MudText>
-                                        <MudSpacer></MudSpacer>
-                                        <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
-                                    </MudStack>
-                                </MudTd>
-                                <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                                    <MudText Typo="Typo.caption">@context.Number</MudText>
-                                </MudTd>
-                                <MudTd>
-                                    <MudText Typo="Typo.caption">@context.Points</MudText>
-                                </MudTd>
-                            </RowTemplate>
-                        </MudTable>
-                    </MudPaper>
+                    <DriverStandings StandingDrivers="@DriverResultsModel" />
                 </MudItem>
                 <MudItem xs="6">
-                    <MudPaper Elevation="15" Class="pa-4 mud-height-full">
-                        <MudPaper MinHeight="60px">
-                            <MudText Typo="Typo.h5">Constructors</MudText>
-                        </MudPaper>
-                        <MudTable Items="@TeamResultsModel" Dense="true">
-                            <HeaderContent>
-                                <MudTh Class="number-col">#</MudTh>
-                                <MudTh Class="accent-cell"></MudTh>
-                                <MudTh>Principal</MudTh>
-                                <MudTh>Name</MudTh>
-                                <MudTh>PTS</MudTh>
-                            </HeaderContent>
-                            <RowTemplate>
-                                <MudTd DataLabel="#" Class="number-col">
-                                    <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
-                                </MudTd>
-                                <MudTd Class="accent-cell">
-                                    <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
-                                </MudTd>
-                                <MudTd>
-                                    <MudText>@context.Principal</MudText>
-                                </MudTd>
-                                <MudTd>
-                                    <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                                        <MudText Typo="Typo.body1">@context.Name</MudText>
-                                        <MudSpacer />
-                                        <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
-                                    </MudStack>
-                                </MudTd>
-                                <MudTd>
-                                    <MudText Typo="Typo.caption">@context.Points</MudText>
-                                </MudTd>
-                            </RowTemplate>
-                        </MudTable>
-                    </MudPaper>
+                    <ConstructorStandings StandingConstructors="@TeamResultsModel" />
                 </MudItem>
             </MudGrid>
         </MudTabPanel>
         <MudTabPanel Text="WDC results">
-            <MudPaper Elevation="15">
-                <MudPaper MinHeight="60px">
-                    <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
-                        <MudText Color=Color.Warning>FL aren't shown yet</MudText>
-                        <MudSpacer />
-                        <MudText Typo="Typo.h4">WDC results @(Season.Year)</MudText>
-                        <MudSpacer />
-                        <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined">
-                            <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWdcResultGraph" />
-                            <ScreenshotButton TargetId="wdc-season-results" />
-                        </MudButtonGroup>
-                    </MudStack>
-                </MudPaper>
-                <MudTable Items="@DriverResultsModel" Dense="true" Class="extra-dense" id="wdc-season-results">
-                    <HeaderContent>
-                        <MudTh Class="number-col">#</MudTh>
-                        <MudTh Class="accent-cell"></MudTh>
-                        <MudTh Style="max-width: 225px">Driver</MudTh>
-                        <MudTh Class="number-col">No.</MudTh>
-                        <MudTh>Team</MudTh>
-                        <MudTh>PTS</MudTh>
-                        @foreach (var race in Races.OrderBy(e => e.Round))
-                        {
-                            <MudTh>
-                                <CountryFlag Code="@race.Track.Country" Size="FlagSize.Small" />
-                            </MudTh>
-                        }
-                        <MudTh class="number-col">AVG</MudTh>
-                    </HeaderContent>
-                    <RowTemplate>
-                        <MudTd Class="number-col">
-                            <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
-                        </MudTd>
-                        <MudTd Class="accent-cell">
-                            <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
-                        </MudTd>
-                        <MudTd Style="max-width: 225px">
-                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center" Style="max-width: 225px">
-                                <MudText Class="overflow-hider">@context.Name</MudText>
-                                <MudSpacer />
-                                <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
-                            </MudStack>
-                        </MudTd>
-                        <MudTd Class="number-col-lg" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
-                            <MudText Typo="Typo.caption">@context.Number</MudText>
-                        </MudTd>
-                        <MudTd>
-                            <MudText>@context.Team</MudText>
-                        </MudTd>
-                        <MudTd>
-                            <MudText Typo="Typo.caption">@context.Points</MudText>
-                        </MudTd>
-                        @foreach (var round in Races.OrderBy(e => e.Round))
-                        {
-                            var result = context.ResultCells.Find(e => e.Round == round.Round);
-                            if (result == null)
-                            {
-                                <MudTd Class="result-cell">-</MudTd>
-                            }
-                            else
-                            {
-                                <MudTdResult Result="@result" LowestScoringPosition="@lowestScoringPosition" />
-                            }
-                        }
-                        <MudTd>
-                            <MudText Typo="Typo.caption">@context.Average.ToString("F1")</MudText>
-                        </MudTd>
-                    </RowTemplate>
-                </MudTable>
-            </MudPaper>
+            <DriverResults StandingDrivers="@DriverResultsModel"
+                           CountryRounds="@countryRounds"/>
         </MudTabPanel>
         <MudTabPanel Text="WCC results">
-            <MudPaper MinHeight="60px">
-                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
-                    <MudText Typo="Typo.h4">WCC results @(Season.Year)</MudText>
-                    <MudSpacer />
-                    <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined">
-                        <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWccResultGraph" />
-                        <ScreenshotButton TargetId="wcc-season-results" />
-                    </MudButtonGroup>
-                </MudStack>
-            </MudPaper>
-            <MudTable Items="@TeamResultsModel" Dense="true" id="wcc-season-results">
-                <HeaderContent>
-                    <MudTh Class="number-col">#</MudTh>
-                    <MudTh Class="accent-cell"></MudTh>
-                    <MudTh>Team</MudTh>
-                    <MudTh>Principal</MudTh>
-                    <MudTh>PTS</MudTh>
-                    @foreach (var race in Races.OrderBy(e => e.Round))
-                    {
-                        <MudTh Class="number-col-lg">
-                            <CountryFlag Code="@race.Track.Country" Size="FlagSize.Small" />
-                        </MudTh>
-                    }
-                    <MudTh>AVG</MudTh>
-                </HeaderContent>
-                <RowTemplate>
-                    <MudTd Class="number-col">
-                        <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
-                    </MudTd>
-                    <MudTd Class="accent-cell">
-                        <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
-                    </MudTd>
-                    <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
-                        <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                            <MudText Typo="Typo.body1" Class="overflow-hider">@context.Name</MudText>
-                            <MudSpacer />
-                            <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
-                        </MudStack>
-                    </MudTd>
-                    <MudTd>
-                        <MudText Typo="Typo.body1">@context.Principal</MudText>
-                    </MudTd>
-                    <MudTd>
-                        <MudText Typo="Typo.caption">@context.Points</MudText>
-                    </MudTd>
-                    @foreach (var round in Races.OrderBy(e => e.Round))
-                    {
-                        var teamResults = context.ResultCells.Where(e => e.Round == round.Round).ToList();
-
-                        <MudTd Class="result-cell">
-                            @if (teamResults.Any())
-                            {
-                                @foreach (var result in teamResults)
-                                {
-                                    <div class="result-cell" style="@(result.GetResultStyle(lowestScoringPosition))">
-                                        <MudText Typo="Typo.caption">@result.GetResultText()</MudText>
-                                    </div>
-                                }
-                            }
-                            else
-                            {
-                                <MudText>-</MudText>
-                            }
-                        </MudTd>
-                    }
-                    <MudTd>
-                        <MudText Typo="Typo.caption">@context.Average.ToString("F1")</MudText>
-                    </MudTd>
-                </RowTemplate>
-            </MudTable>
+            <ConstructorResults StandingConstructors="@TeamResultsModel"
+                                CountryRounds="@countryRounds" />
         </MudTabPanel>
     </MudTabs>
 }
@@ -247,19 +41,22 @@
     List<SeasonDriver> SeasonDrivers { get; set; }
     List<SeasonTeam> SeasonTeams { get; set; }
     List<Race> Races { get; set; }
+
     List<StandingDriverModel> DriverResultsModel { get; set; }
     List<StandingTeamModel> TeamResultsModel { get; set; }
 
-    Dictionary<long, long> fastestResultForRaces = new();
+    Dictionary<int, Country> countryRounds = new();
 
-    int lowestScoringPosition = 3;
     bool loading = true;
 
     protected override async Task OnInitializedAsync()
     {
-        Races = await RaceService.GetRacesBySeason(Season.Id);
-        SeasonDrivers = await EntrantService.GetSeasonDriversWithResults(Season.Id);
-        SeasonTeams = await EntrantService.GetSeasonTeamsWithResults(Season.Id);
+        Races = await _raceService.GetRacesBySeason(Season.Id);
+        SeasonDrivers = await _entrantService.GetSeasonDriversWithResults(Season.Id);
+        SeasonTeams = await _entrantService.GetSeasonTeamsWithResults(Season.Id);
+
+        foreach (var round in Races.OrderBy(e => e.Round))
+            countryRounds.Add(round.Round, round.Track?.Country ?? Constants.DefaultCountry);
 
         int indexer = 0;
 
@@ -277,22 +74,7 @@
             .Select(e => ToTeamResultModel(e, ++indexer))
             .ToList();
 
-        if (Season != null && Season.PointAllotments?.Any() == true)
-            lowestScoringPosition = Season.PointAllotments.Max(e => e.Position);
-
         loading = false;
-    }
-
-    async Task ShowWdcResultGraph()
-    {
-        var parameters = new DialogParameters { ["Drivers"] = DriverResultsModel, ["Season"] = Season };
-        _ = await _dialog.ShowAsync<WdcResultChart>("WDC results chart", parameters);
-    }
-
-    async Task ShowWccResultGraph()
-    {
-        var parameters = new DialogParameters { ["Teams"] = TeamResultsModel, ["Season"] = Season };
-        _ = await _dialog.ShowAsync<WccResultChart>("WCC results chart", parameters);
     }
 
     private StandingDriverModel ToDriverResultModel(SeasonDriver driver, int position)
@@ -342,6 +124,7 @@
                 Status = result.Status,
                 Round = Races.Single(e => e.Id == result.RaceId).Round,
                 Pole = result.Grid == 1,
+                FL = result.FastestLap,
             };
     }
 }
